force-app/main/default/objects/Notification_Routing__mdt/Notification_Routing__mdt.object-meta.xml
<CustomObject>
    <label>Notification Routing</label>
    <pluralLabel>Notification Routings</pluralLabel>
</CustomObject>