force-app/main/default/objects/Notification_Routing__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>