force-app/main/default/objects/Notification_Routing__mdt/fields/Minimum_Severity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Severity__c</fullName>
    <label>Minimum Severity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>