force-app/main/default/objects/Notification_Routing__mdt/fields/Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL__c</fullName>
    <label>Webhook URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>